--- a/webapp/dogtorpet/src/app/components/mascota/mascota.component.html
+++ b/webapp/dogtorpet/src/app/components/mascota/mascota.component.html
@@ -1,1 +1,54 @@
-<p>mascota works!</p>
+<div class="card h-100 w-100 shadow">
+  <div class="card-body">
+    <h5 class="card-title text-primary mb-3">
+      <div class="row">
+        <div class="col text-start">{{mascota.nombre}}</div>
+        <div class="col text-end">
+          @switch (mascota.tipo) {
+            @case(1) {
+              <i class="fa-solid fa-dog"></i>
+            }
+            @case(2) {
+              <i class="fa-solid fa-cat"></i>
+            }
+          }
+        </div>
+      </div>
+    </h5>
+    <div class="row">
+      <div class="col-md-4">
+        <img src="{{mascota.fotoUrl}}" class="img-fluid rounded">
+      </div>
+      <div class="col-md-8">
+        <div class="card-text">
+          <div class="row">
+            <div class="col text-black">Fecha Nac.:</div>
+            <div class="col text-end text-muted">{{mascota.fechaNac}}</div>
+          </div>
+          <div class="row">
+            <div class="col text-black">Raza:</div>
+            <div class="col text-end text-muted">{{mascota.raza}}</div>
+          </div>
+          <div class="row">
+            <div class="col text-black">Color:</div>
+            <div class="col text-end text-muted">{{mascota.color}}</div>
+          </div>
+          <div class="row">
+            <div class="col text-black">Genero:</div>
+            <div class="col text-end text-muted">{{mascota.genero}}</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card-footer">
+    <div class="row">
+      <div class="col text-start">
+        <a class="fa-solid fa-trash-can" (click)="confirmarEliminar($event)"></a>
+      </div>
+      <div class="col text-end">
+        <a class="fa-regular fa-pen-to-square"></a>
+      </div>
+    </div>
+  </div>
+</div>
