--- a/webapp/dogtorpet/src/app/app.component.html
+++ b/webapp/dogtorpet/src/app/app.component.html
@@ -1,4 +1,4 @@
-@if(true) {
+@if(loginSvc.loggedIn()) {
   <nav class="navbar navbar-expand-lg bg-primary navbar-dark">
     <div class="container-fluid">
       <span class="navbar-brand ms-2 h1 mb-0">
@@ -6,7 +6,7 @@
       </span>
       <div class="navbar-nav align-items-end">
         <button class="btn btn-primary me-4" routerLink="/nuevo">Agregar</button>
-        <button class="btn btn-secondary">Cerrar Sesión</button>
+        <button class="btn btn-secondary" (click)="cerrarSesion()">Cerrar Sesión</button>
       </div>
     </div>
   </nav>
